--- a/index.html
+++ b/index.html
@@ -155,10 +155,60 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2021 - Present</p>
-                    <h5>Web Developer<span> - Google</span></h5>
+                    <p class="tl-duration">2010 - 2014</p>
+                    <h5>Carpenter<span> - Porter Davis Homes</span></h5>
                     <p>
-                        I have been working at Google since 2021. I am currently a senior Web Developer, hoping to transition to Software Engineer where i am able to manage both front and back end components.
+                        At Porter Davis Homes, i worked as an apprentice carpenter, mainly building house frames from scratch. In my time as an apprentice we built over 150 house frames all over Victoria.
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2014 - 2015</p>
+                    <h5>Maintenance Worker<span> - Big John's Maintenance</span></h5>
+                    <p>
+                        After i completed my schooling and apprenticeship, i went out on my own down various smaller projects and maintenance for schools, housing commissions and local people who needed small jobs completed.
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2015 - 2016</p>
+                    <h5>Consultant<span> - Modern Solar</span></h5>
+                    <p>
+                        After a year of being out on my own, i decided to see if i could change my career path abit, joining Modern Solar i was tasked with setting up appointments with solar professionals to go to customers homes and present them with the latest solar technology.
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2016 - 2016</p>
+                    <h5>Warehouse Assistant<span> - Star Track</span></h5>
+                    <p>
+                        While i was working at Modern during the day, i decided to earn some extra money by applying to be a warehouse assistant at Star Track industries, here i would man forklifts and load trucks up with latest deliveries and items.
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2016 - 2024</p>
+                    <h5>EUC Technician<span> - CWRetail (Chemist Warehouse)</span></h5>
+                    <p>
+                        I started off as a configuration techncian, configuring all of the devices that are currently in the stores, from PC's to servers to switches. After 3 or 4 years I was then moved up into EUC team as an EUC technician where i was working on various projects and with multiple tools. My main focus was working with VMware Workspace One, managing all the mobile devices across Australia.
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2024 - Present</p>
+                    <h5>Software Engineer<span> - ?</span></h5>
+                    <p>
+                        This chapter is yet to be written.
                     </p>
                 </div>
             </div>
