<updating portfolio section of code.>

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <h2>My <span>Portfolio</span><span class="bg-text">My Work</span></h2>
             </div>
             <p class="port-text">
-                Here is some of the work that i have done recently in various programming languages.
+                Here is some of the work that i have done recently with various programming languages.
             </p>
             <div class="portfolios">
                 <div class="portfolio-item">
@@ -231,8 +231,8 @@
                             <a href="https://github.com/citiz3nfive" class="icon" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
+                            <a href="https://www.linkedin.com/in/john-melino-euc-technician" class="icon" target="_blank">
+                                <i class="fab fa-linkedin"></i>
                             </a>
                             <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
@@ -247,11 +247,11 @@
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/citiz3nfive" class="icon" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
+                            <a href="https://www.linkedin.com/in/john-melino-euc-technician" class="icon" target="_blank">
+                                <i class="fab fa-linkedin"></i>
                             </a>
                             <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
@@ -266,11 +266,11 @@
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/citiz3nfive" class="icon" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
+                            <a href="https://www.linkedin.com/in/john-melino-euc-technician" class="icon" target="_blank">
+                                <i class="fab fa-linkedin"></i>
                             </a>
                             <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
@@ -285,11 +285,11 @@
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/citiz3nfive" class="icon" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
+                            <a href="https://www.linkedin.com/in/john-melino-euc-technician" class="icon" target="_blank">
+                                <i class="fab fa-linkedin"></i>
                             </a>
                             <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
@@ -304,11 +304,11 @@
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/citiz3nfive" class="icon" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
+                            <a href="https://www.linkedin.com/in/john-melino-euc-technician" class="icon" target="_blank">
+                                <i class="fab fa-linkedin"></i>
                             </a>
                             <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
@@ -318,16 +318,16 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="images/port2.jpg" alt="">
+                        <img src="images/port6.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/citiz3nfive" class="icon" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
+                            <a href="https://www.linkedin.com/in/john-melino-euc-technician" class="icon" target="_blank">
+                                <i class="fab fa-linkedin"></i>
                             </a>
                             <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
@@ -342,11 +342,11 @@
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/citiz3nfive" class="icon" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
+                            <a href="https://www.linkedin.com/in/john-melino-euc-technician" class="icon" target="_blank">
+                                <i class="fab fa-linkedin"></i>
                             </a>
                             <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
