<added theme button code.>

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                                     <span>Location</span>
                                 </div>
                                 <p>
-                                    : London, united Kingdom
+                                    : Melbourne, Australia
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -465,7 +465,7 @@
                                     <span>Email</span>
                                 </div>
                                 <p>
-                                    <span>: maclinzuniversal@gmail.com</span>
+                                    <span>: JohnMelino@gmail.com</span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -474,7 +474,7 @@
                                     <span>Education</span>
                                 </div>
                                 <p>
-                                    <span>: Sussex University, East Sussex</span>
+                                    <span>: RMIT University, Melbourne</span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -483,7 +483,7 @@
                                     <span>Mobile Number</span>
                                 </div>
                                 <p>
-                                    <span>: 07522670617</span>
+                                    <span>: 0425199051</span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -492,7 +492,7 @@
                                     <span>Languages</span>
                                 </div>
                                 <p>
-                                    <span>: Afrikaans, English, Spanish</span>
+                                    <span>: English</span>
                                 </p>
                             </div>
                         </div>
@@ -554,6 +554,10 @@
         <div class="control control-5" data-id="contact">
             <i class="fas fa-envelope-open"></i>
         </div>
+    </div>
+
+    <div class="theme-btn">
+        <i class="fas fa-adjust"></i>
     </div>
 
     <script src="app.js"></script>
