--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </p>
                 <!--class below, you can enter your url for your cv in href section.-->
                 <div class="btn-con">
-                    <a href="" class="main-btn">
+                    <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fjohn-melino-euc-technician%3Ffbclid%3DIwAR0SrrYFsx4PrflK9X3B4lCTeOcLN5kUAKGHGy4hIlws0SCrJtcF9zdzpDI&h=AT0gTJcOAEdLXi1W5WD4GoCFhd-DgzYhPeIwhgS6j3_KmgC-USVo8yw_vhZ9YLmDOs7EY8nKimKJDCyA-WB3gB9CdjxDHQOq31SNMqQ3R5Bjo8upeIwDz9L0aTpXz160oTLfhXbRI4mwcziY5Bo" class="main-btn" target="_blank">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -57,7 +57,7 @@
                         I am also hopeful that i can display this Portfolio to small business owners who need websites.
                     </p>
                     <div class="btn-con">
-                        <a href="" class="main-btn">
+                        <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fjohn-melino-euc-technician%3Ffbclid%3DIwAR0SrrYFsx4PrflK9X3B4lCTeOcLN5kUAKGHGy4hIlws0SCrJtcF9zdzpDI&h=AT0gTJcOAEdLXi1W5WD4GoCFhd-DgzYhPeIwhgS6j3_KmgC-USVo8yw_vhZ9YLmDOs7EY8nKimKJDCyA-WB3gB9CdjxDHQOq31SNMqQ3R5Bjo8upeIwDz9L0aTpXz160oTLfhXbRI4mwcziY5Bo" class="main-btn" target="_blank">
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
@@ -234,7 +234,7 @@
                             <a href="https://www.linkedin.com/in/john-melino-euc-technician" class="icon" target="_blank">
                                 <i class="fab fa-linkedin"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <a href="https://www.youtube.com/" class="icon" target="_blank">
                                 <i class="fab fa-youtube"></i>
                             </a>
                         </div>
@@ -253,7 +253,7 @@
                             <a href="https://www.linkedin.com/in/john-melino-euc-technician" class="icon" target="_blank">
                                 <i class="fab fa-linkedin"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <a href="https://www.youtube.com/" class="icon" target="_blank">
                                 <i class="fab fa-youtube"></i>
                             </a>
                         </div>
@@ -272,7 +272,7 @@
                             <a href="https://www.linkedin.com/in/john-melino-euc-technician" class="icon" target="_blank">
                                 <i class="fab fa-linkedin"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <a href="https://www.youtube.com/" class="icon" target="_blank">
                                 <i class="fab fa-youtube"></i>
                             </a>
                         </div>
@@ -291,7 +291,7 @@
                             <a href="https://www.linkedin.com/in/john-melino-euc-technician" class="icon" target="_blank">
                                 <i class="fab fa-linkedin"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <a href="https://www.youtube.com/" class="icon" target="_blank">
                                 <i class="fab fa-youtube"></i>
                             </a>
                         </div>
@@ -310,7 +310,7 @@
                             <a href="https://www.linkedin.com/in/john-melino-euc-technician" class="icon" target="_blank">
                                 <i class="fab fa-linkedin"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <a href="https://www.youtube.com/" class="icon" target="_blank">
                                 <i class="fab fa-youtube"></i>
                             </a>
                         </div>
@@ -329,7 +329,7 @@
                             <a href="https://www.linkedin.com/in/john-melino-euc-technician" class="icon" target="_blank">
                                 <i class="fab fa-linkedin"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <a href="https://www.youtube.com/" class="icon" target="_blank">
                                 <i class="fab fa-youtube"></i>
                             </a>
                         </div>
@@ -348,7 +348,7 @@
                             <a href="https://www.linkedin.com/in/john-melino-euc-technician" class="icon" target="_blank">
                                 <i class="fab fa-linkedin"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <a href="https://www.youtube.com/" class="icon" target="_blank">
                                 <i class="fab fa-youtube"></i>
                             </a>
                         </div>
@@ -381,8 +381,8 @@
                                 How to Become an Expert in Web Design
                             </h4>
                             <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
+                                Here i'll show you a day in the life of become a Web designer.
+                                From HTML to CSS, even developing Android applications.
                             </p>
                         </div>
                     </div>
@@ -393,8 +393,8 @@
                                 Become a Web Designer in 10 Days
                             </h4>
                             <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
+                                Is it possible to become a Web Designer in 10 days or less?
+                                In this blog i will show you how its possible to do so.
                             </p>
                         </div>
                     </div>
@@ -405,8 +405,8 @@
                                 Debbuging made easy with Web Inspector
                             </h4>
                             <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
+                                Here i'll show you how to use the debugger. 
+                                This tool is very important when it comes to Web Inspector.
                             </p>
                         </div>
                     </div>
@@ -417,8 +417,8 @@
                                 Get started with Web Design and UI Design
                             </h4>
                             <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
+                                Here i'll show you how to get started as a Web Designer. 
+                                With these few steps you will be on your way to becoming what you want.
                             </p>
                         </div>
                     </div>
@@ -429,8 +429,8 @@
                                 This is what you need to know about Web Design
                             </h4>
                             <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
+                                Here are a few photos i've taken along the way. 
+                                This will tell you everything you need to know.
                             </p>
                         </div>
                     </div>
@@ -446,8 +446,9 @@
                     <div class="left-contact">
                         <h4>Contact me here</h4>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            In, laborum numquam? Quam excepturi perspiciatis quas quasi.
+                            Below is a list of information that will help you get in contact with me.
+                            If you liked what you saw regarding the way the website is developed, please put your enquiries here. 
+                            <p>Thank you.</p>
                         </p>
                         <div class="contact-info">
                             <div class="contact-item">
@@ -501,13 +502,13 @@
                                 <a href="www.facebook.com" target="_blank">
                                     <i class="fab fa-facebook-f"></i>
                                 </a>
-                                <a href="#" target="_blank">
+                                <a href="https://twitter.com/" target="_blank">
                                     <i class="fab fa-twitter"></i>
                                 </a>
-                                <a href="#" target="_blank">
+                                <a href="https://github.com/citiz3nfive" target="_blank">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="#" target="_blank">
+                                <a href="https://www.youtube.com/" target="_blank">
                                     <i class="fab fa-youtube"></i>
                                 </a>
                             </div>
@@ -526,7 +527,7 @@
                                 <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
                             </div>
                             <div class="submit-btn">
-                                <a href="#" class="main-btn">
+                                <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fjohn-melino-euc-technician%3Ffbclid%3DIwAR3j0lcuOljGEU1DG7DkSJHEs38CdNBgF-w-lWoUWc_yJbJ-yluG0_mT2Ks&h=AT0gTJcOAEdLXi1W5WD4GoCFhd-DgzYhPeIwhgS6j3_KmgC-USVo8yw_vhZ9YLmDOs7EY8nKimKJDCyA-WB3gB9CdjxDHQOq31SNMqQ3R5Bjo8upeIwDz9L0aTpXz160oTLfhXbRI4mwcziY5Bo" class="main-btn" target="_blank">
                                     <span class="btn-text">Download CV</span>
                                     <span class="btn-icon"><i class="fas fa-download"></i></span>
                                 </a>
