Updated intro Photo and updated about me para

--- a/index.html
+++ b/index.html
@@ -17,21 +17,23 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="images/hero1.png" width="500" alt="">
+                    <img src="images/hero2.png" width="500" alt="">
                 </div>
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hi, I'm <span>John Melino.</span>
-                    <p>An aspiring Software Engineer.</p>
+                    Hi, welcome to <span>CitizenFive.</span>
+                    <p>My name is John, an aspiring Software Engineer.</p>
                 </h1>
                 <p>
-                    I'm 29 from Melbourne, Australia.
-                    I am creating this portfolio to showcase the skills I am currently learning.
-                    Hopefully I am able to change my career path to something I love.
+                    I'm 31 from Melbourne, Australia.
+                    I am passionate about becoming a full-stack web developer and software engineer, I'm pursuing this journey part-time alongside my current job. 
+                    I earned an Introduction to Programming certification from RMIT in 2022 and am currently expanding my skills through ongoing learning and certifications. 
+                    This portfolio showcases my progress and the possibilities I'm eager to explore.
+                </p>
+                <p>
                     Please feel free to look around and explore.
                 </p>
-                <!--class below, you can enter your url for your cv in href section.-->
                 <div class="btn-con">
                     <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fjohn-melino-euc-technician%3Ffbclid%3DIwAR0SrrYFsx4PrflK9X3B4lCTeOcLN5kUAKGHGy4hIlws0SCrJtcF9zdzpDI&h=AT0gTJcOAEdLXi1W5WD4GoCFhd-DgzYhPeIwhgS6j3_KmgC-USVo8yw_vhZ9YLmDOs7EY8nKimKJDCyA-WB3gB9CdjxDHQOq31SNMqQ3R5Bjo8upeIwDz9L0aTpXz160oTLfhXbRI4mwcziY5Bo" class="main-btn" target="_blank">
                         <span class="btn-text">Download CV</span>
@@ -50,7 +52,7 @@
                 <div class="left-about">
                     <h4>Information About Me</h4>
                     <p>
-                        My Names John Melino, I am a 29 year old father of one and currently I am an EUC technician currently working for CWRetail.
+                        My names is John Melino, I am a 31 year old father of two and currently I am an Senior EUC technician working for CWRetail.
                         The reason i am currently writing and developing this portfolio is to gain the skills and knowledge needed to make a website.
                         <br /> <br />I am hoping in the near future i can change my career path and become a full time Software Engineer or Web Developer.
                         I will be studying part-time after work to complete an "Intro into Programming" online course at RMIT.
